# shop-api

./: .gitignore  README.md  main.py  pyproject.toml
