[tool.poetry]
name = "shop-api"
version = "0.1.0"
description = ""
authors = ["Artem Vinogradov <vinartgen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = {extras = ["email"], version = "^2.5.2"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
